--- a/strings/langs/tr.yml
+++ b/strings/langs/tr.yml
@@ -170,7 +170,7 @@ str_2 : "➻ Geçerli yayın doğrulandı.\n\nİşleniyor..."
 str_3 : "YouTube canlı yayını akışı başarısız oldu, canlı format bulunamadı."
 
 ping_1 : "{0} ping atıyor..."
-ping_2 : "{1}\n\n🏓 Ping : {0}ms..\n\n➻ Sistem Durumu :\n\n↬ Çalışma Süresi : {2}\n↬ RAM : {3}\n↬ CPU : {4}\n↬ Disk : {5}\n↬ Py-TgCalls : {6}ms\n\n🥀 tarafından » JARVIS ♡︎"
+ping_2 : "{1}\n\n🏓 Ping : {0}ms..\n\n➻ Sistem Durumu :\n\n↬ Çalışma Süresi : {2}\n↬ RAM : {3}\n↬ CPU : {4}\n↬ Disk : {5}\n↬ Py-TgCalls : {6}ms\n\n🥀 tarafından » VISHAL ♡︎"
 
 queue_1 : "» Kuyruk getiriliyor...\n\nLütfen bekleyin..."
 queue_2 : "» Kuyruk boş."
